# scala-bazel

./: .bazelrc  .bazelrc.remote  .bazelrc.remote.buildbuddy  .bazelrc.remote.engflow  .gitignore  README.md  WORKSPACE  large_files.bzl
HttpClient/src/main/scala/com/wixpress/workshop/: BUILD.bazel  EitherOps.scala  HttpBinPayload.scala  Main.scala  OptionOps.scala  Solution1.scala  Solution2.scala  Solution3.scala  Solution4.scala
toolchains/: BUILD
tools/: bazel  load_2nd_party_repositories.bzl  reporter  update_latest_2nd_party_versions  vmr
tools/bazelrc/: .bazelrc.managed.dev.env  .bazelrc.remotesettings
tools/bazelwrapper/: bazelcommand.py  cmd_interceptor.py  context.py  vmr_interop.py  wrapper.py
tools/bazelwrapper/bi/: entrypoint.py  frog.py  profile.py  profile_reporter.py  profiles_processor.py  schema.py  wrapper_api.py
tools/bazelwrapper/env/: info.py  inspector.py
tools/bazelwrapper/remotecache/: flagsresolver.py  wrapper_api.py
tools/bazelwrapper/utils/: env_vars.py  feature_flags.py  io_utils.py  io_utils_fakes.py  list_utils.py  logging.py  pidlock.py  safe_exec.py  simple_http_client.py  string_utils.py  subproc_launcher.py
tools/build_rules/: BUILD.bazel  prelude_bazel
tools/info/: wixtaller.json
tools/intellij/: .managed.bazelproject
tools/stamping/: workspace_status.sh
tools/virtualmonorepo/: bazel_driver.py  cli.py  context.py  differ.py  extensions.py  git.py  httpclient.py  ioutils.py  linker.py  log.py  main.py  paths.py  processexec.py  registry.py  resolver.py  templates.py  vector.py  vector_provider.py
(+4 files in other folders)
